--- a/expressman.in
+++ b/expressman.in
@@ -1,6 +1,21 @@
 5
-aaron SF
-eric YT
-alex ZT
-beryl SF
-Gardenia ZT
+aaron 
+SF
+18888888888
+12345
+eric
+SF 
+17777777777 
+12346
+alex
+ZT 
+16666666666 
+12334
+beryl
+SG
+18888999999 
+12323
+Gardenia 
+SF
+122313123123
+12341
