--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,8 @@
         "${file}",
         "-o",
         "${fileDirname}\\${fileBasenameNoExtension}.exe",
+        "-Wall",
+        "-O2",
         "-std=c++23"
       ],
       "command": "E:\\mingw64\\bin\\g++.exe",
@@ -51,6 +53,29 @@
       },
       "problemMatcher": [],
       "type": "pause-console"
+    },
+    {
+      "args": [
+        "-ExecutionPolicy",
+        "ByPass",
+        "-NoProfile",
+        "-File",
+        "C:\\Users\\syq\\AppData\\Roaming\\vscch/check-ascii.ps1",
+        "${fileDirname}\\${fileBasenameNoExtension}.exe"
+      ],
+      "command": "C:\\Windows\\system32\\WindowsPowerShell\\v1.0\\powershell.exe",
+      "dependsOn": "single file build",
+      "label": "ascii check",
+      "presentation": {
+        "clear": true,
+        "echo": false,
+        "focus": false,
+        "panel": "shared",
+        "reveal": "never",
+        "showReuseMessage": false
+      },
+      "problemMatcher": [],
+      "type": "process"
     }
   ],
   "version": "2.0.0"
