--- a/expressman.in
+++ b/expressman.in
@@ -1,6 +1,6 @@
 5
-张三 SF ** 17326263646
-李四 YT && 17326663746
-王五 SF && 17326763686
-赵六 beryl ZT %% 17326263886
-孙七 Gardenia ZT #% 178826263646
+张三 SF swffqf123 17326263646
+李四 YT vasqdffq2 17326663746
+王五 SF vvaswfq12 17326763686
+赵六 ZT sdadwq123 17326263886
+孙七 ZT asdf1234 178826263646
